<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>io.github.dawdler-series</groupId>
		<artifactId>dawdler-boot</artifactId>
		<version>21.4-jdk21-RELEASES</version>
	</parent>
	<artifactId>dawdler-boot-classloader</artifactId>
	<name>dawdler-boot-classloader</name>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<encoding>${project.build.sourceEncoding}</encoding>
					<source>21</source>
					<target>21</target>
					<compilerArgs>
						<arg>--add-exports</arg>
						<arg>
							java.base/jdk.internal.loader=dawdler.boot.classloader</arg>
						<arg>--add-exports</arg>
						<arg>
							java.base/jdk.internal.misc=dawdler.boot.classloader</arg>
						<arg>--add-exports</arg>
						<arg>
							java.base/jdk.internal.perf=dawdler.boot.classloader</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>lib/</classpathPrefix>
							<mainClass>
								com.anywide.dawdler.fatjar.loader.launcher.JarLauncher</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>